# SIH

./: .gitignore  Makefile  README.md  architecture.md  docker-compose.yml  floats.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  scheduler.py
app/db/: init_db.py  models.py
app/routers/: chat.py  ingest.py
app/services/: rag.py  vector_db_adapter.py
docker/backend/: Dockerfile
docker/etl/: Dockerfile
docker/frontend/: Dockerfile
etl/: ingest_argovis.py
frontend/: app.py
k8s/: backend-deployment.yaml  chroma-deployment.yaml  frontend-deployment.yaml  postgres-deployment.yaml
notebooks/: 01_eda.ipynb
terraform/aws/: main.tf  outputs.tf  terraform.tfvars  variables.tf
tests/: test_chat_router.py  test_ingest_router.py
