[tool.poetry]
name = "floatchat"
version = "0.1.0"
description = "A RAG application for ARGO oceanographic data."
authors = ["Gemini <gemini@google.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

# Backend
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
python-dotenv = "^1.0.1"

# Data Processing
xarray = "^2024.2.0"
netcdf4 = "^1.6.5"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
geopandas = "^0.14.3"

# Database
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.27"
geoalchemy2 = "^0.14.0"

# Vector DB & Embeddings
chromadb = "^0.4.22"
sentence-transformers = "^2.4.0"

# LLM & Langchain
langchain = "^0.1.9"
langchain-google-genai = "^0.0.6"
langchain-community = "^0.0.24"

# Frontend (Streamlit)
streamlit = "^1.31.1"

# Logging & Monitoring
structlog = "^24.1.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
opentelemetry-exporter-otlp-proto-http = "^1.22.0"

apscheduler = "^3.10.4"
pytest = "^8.0.1"
requests = "^2.31.0"
flake8 = "^7.0.0"
black = "^24.2.0"
isort = "^5.13.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
