[tool.poetry]
name = "floatchat"
version = "0.1.0"
description = "A RAG application for ARGO oceanographic data."
authors = ["Gemini <gemini@google.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

# Backend
fastapi = "*"
uvicorn = "*"
python-dotenv = "*"
pydantic-settings = "*"

# Data Processing
xarray = "*"
netcdf4 = "*"
pandas = "*"
pyarrow = "*"
geopandas = "*"

# Database
psycopg2-binary = "*"
sqlalchemy = "*"
geoalchemy2 = "*"

# Vector DB & Embeddings
langchain-pinecone = "*"
pinecone-client = "*"
sentence-transformers = "*"

# LLM & Langchain
langchain = "*"
langchain-google-genai = "*"
langchain-community = "*"

# Frontend (Streamlit)
streamlit = "*"

# Logging & Monitoring
structlog = "*"
opentelemetry-sdk = "*"
opentelemetry-instrumentation-fastapi = "*"
opentelemetry-exporter-otlp-proto-http = "*"

apscheduler = "*"
pytest = "*"
requests = "*"
flake8 = "*"
black = "*"
isort = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
